@@ -1884,6 +1884,17 @@
       </component>
     </version>
   </module>
+  <module name="medusa">
+    <version release="gnome-2.6">
+      <component name="medusa" dir="medusa" group="extras">
+	<podir dir="po"/>
+	<potname name="medusa-2.0.pot"/>
+	<branch name="HEAD"/>
+	<regenerate/>
+	<download/>
+      </component>
+    </version>
+  </module>
   <module name="memprof">
     <version release="gnome-2.6">
       <component name="memprof" dir="memprof" group="extras">
