@@ -1,3 +1,7 @@
+2003-12-07  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Added medusa.
+
 2003-12-04  Christian Neumair  <chris@gnome-de.org>
 
 	* translation-status.xml: Removed libplanner. It has been merged with
